[package]
name = "dsv-seeker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple DSV query interpreter"
keywords = ["csv", "dsv", "query", "dsl"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]
repository = "https://github.com/HoloTheDrunk/dsv-util"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
csv = "1.1.6"
pest = "2.4.0"
pest_derive = "2.4.0"
regex = "1.6.0"
strum = { version = "0.24.1", features = ["derive"] }
